Making HTTP client injectable. Adding an example for AppEngine-hosted openid relying party.